--- a/homeassistant/components/intellifire/translations/en.json
+++ b/homeassistant/components/intellifire/translations/en.json
@@ -6,7 +6,7 @@
         "error": {
             "cannot_connect": "Failed to connect to intellifire on local network - check host and try agian.",
             "api_error": "API Error",
-            "iftapi_connect": "iftapi connect error"
+            "iftapi_connect": "IFTAPI Connection Error. Perhaps try insecure (http) mode."
         },
         "step": {
             "user": {
