--- a/homeassistant/components/intellifire/translations/en.json
+++ b/homeassistant/components/intellifire/translations/en.json
@@ -1,18 +1,33 @@
 {
-    "config": {
-        "abort": {
-            "already_configured": "Device is already configured"
-        },
-        "error": {
-            "cannot_connect": "Failed to connect",
-            "unknown": "Unexpected error"
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "host": "Host"
-                }
-            }
+  "config": {
+    "abort": {
+      "already_configured": "Device is already configured"
+    },
+    "error": {
+      "api_error": "api_error",
+      "cannot_connect": "Could not connect to a fireplace endpoint at url: http://{host}/poll\nVerify IP address and try again",
+      "iftapi_connect": "iftapi_connect"
+    },
+    "step": {
+      "local_config": {
+        "title": "IntelliFire - Local Config",
+        "description": "Enter the IP address of the IntelliFire unit on your local network.",
+        "data": {
+          "host": "Host (IP Address)"
         }
+      },
+      "api_config": {
+        "title": "IntelliFire - API Configuration",
+        "description": "IntelliFire will need to reach out to [iftapi.net](https://iftapi.net/webaccess/login.html) in order to obtain an API key. Once it has obtained this API key, the rest of its interactions will occur compeltely within the local network. If the API key were to expire it would again need to reach out to https://iftapi.net/webaccess/login.html\n\nUsername and password are the same information used in your IntelliFire Android/iOS application. ",
+        "data": {
+          "password": "Password",
+          "username": "Username (email)"
+        }
+      },
+      "user": {
+        "description": "Username and password are the same information used in your IntelliFire Android/iOS application.",
+        "title": "IntelliFire Config"
+      }
     }
+  }
 }
